--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.0.1",
     "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
-    "discord.js": "^14.13.0",
+    "@sapphire/snowflake": "^3.5.1",
+    "discord-api-types": "^0.37.56",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "zod": "^3.22.2",
     "zodix": "^0.4.2"
   },
@@ -26,6 +29,7 @@
     "@remix-run/eslint-config": "^1.19.3",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.16.0",
     "autoprefixer": "^10.4.15",
     "concurrently": "^8.2.1",
     "eslint": "^8.38.0",
