--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-showdown": "^2.3.1",
     "zod": "^3.22.2",
     "zodix": "^0.4.2"
   },
