--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
     "@sapphire/snowflake": "^3.5.1",
+    "@types/showdown": "^2.0.1",
     "discord-api-types": "^0.37.56",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
