--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord-api-types": "^0.37.56",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-showdown": "^2.3.1",
@@ -31,6 +32,7 @@
     "@remix-run/dev": "^1.19.3",
     "@remix-run/eslint-config": "^1.19.3",
     "@types/react": "^18.0.35",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.16.0",
     "autoprefixer": "^10.4.15",
