--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-showdown": "^2.3.1",
+    "remix-auth-discord": "^1.2.1",
     "zod": "^3.22.2",
     "zodix": "^0.4.2"
   },
