--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@discordjs/rest": "^2.0.1",
+    "@prisma/client": "^5.3.1",
     "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
@@ -20,6 +21,7 @@
     "@types/showdown": "^2.0.1",
     "discord-api-types": "^0.37.56",
     "isbot": "^3.6.8",
+    "prisma": "^5.3.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
