--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-localization": "^1.0.19",
     "react-modal": "^3.16.1",
     "react-showdown": "^2.3.1",
     "remix-auth-discord": "^1.2.1",
