--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-localization": "^1.0.19",
     "react-modal": "^3.16.1",
     "react-showdown": "^2.3.1",
+    "redis": "^4.6.10",
     "remix-auth-discord": "^1.2.1",
     "zod": "^3.22.2",
     "zodix": "^0.4.2"
