--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "boogiehook",
   "private": true,
   "sideEffects": false,
   "license": "AGPL-3.0-or-later",
@@ -13,10 +14,10 @@
   "dependencies": {
     "@discordjs/rest": "^2.0.1",
     "@prisma/client": "^5.3.1",
-    "@remix-run/css-bundle": "^1.19.3",
-    "@remix-run/node": "^1.19.3",
-    "@remix-run/react": "^1.19.3",
-    "@remix-run/serve": "^1.19.3",
+    "@remix-run/css-bundle": "^2.0.1",
+    "@remix-run/node": "^2.0.1",
+    "@remix-run/react": "^2.0.1",
+    "@remix-run/serve": "^2.0.1",
     "@sapphire/snowflake": "^3.5.1",
     "@types/showdown": "^2.0.1",
     "discord-api-types": "^0.37.56",
@@ -34,8 +35,8 @@
     "zodix": "^0.4.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.3",
-    "@remix-run/eslint-config": "^1.19.3",
+    "@remix-run/dev": "^2.0.1",
+    "@remix-run/eslint-config": "^2.0.1",
     "@types/react": "^18.0.35",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.11",
@@ -48,6 +49,6 @@
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
