--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sapphire/snowflake": "^3.5.1",
     "@types/showdown": "^2.0.1",
     "discord-api-types": "^0.37.56",
+    "emoji-picker-react": "^4.5.16",
     "isbot": "^3.6.8",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
