--- a/package.json
+++ b/package.json
@@ -3,55 +3,61 @@
   "private": true,
   "sideEffects": false,
   "license": "AGPL-3.0-or-later",
+  "type": "module",
   "scripts": {
-    "build": "npm run build:css && remix build",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "start": "remix-serve build",
+    "build": "remix build",
+    "deploy": "wrangler deploy",
+    "dev": "remix dev --manual -c \"npm start\"",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "wrangler dev ./build/index.js",
     "typecheck": "tsc",
-    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
+    "migrate-dev": "drizzle-kit generate:sqlite --schema=app/db/schema.server.ts --out=./migrations && wrangler d1 migrations apply DB --local",
+    "migrate": "yarn migrate-dev && wrangler d1 migrations apply DB"
   },
   "dependencies": {
-    "@discordjs/rest": "^2.0.1",
-    "@prisma/client": "^5.3.1",
-    "@remix-run/css-bundle": "^2.0.1",
-    "@remix-run/node": "^2.0.1",
-    "@remix-run/react": "^2.0.1",
-    "@remix-run/serve": "^2.0.1",
-    "@sapphire/snowflake": "^3.5.1",
-    "@types/showdown": "^2.0.1",
-    "discord-api-types": "^0.37.56",
-    "emoji-picker-react": "^4.5.16",
+    "@cloudflare/kv-asset-handler": "^0.1.3",
+    "@discordjs/rest": "^2.2.0",
+    "@emoji-mart/data": "^1.1.2",
+    "@remix-run/cloudflare": "^2.4.0",
+    "@remix-run/css-bundle": "^2.4.0",
+    "@remix-run/react": "^2.4.0",
+    "@types/showdown": "^2.0.6",
+    "discord-api-types": "^0.37.66",
+    "discord-snowflake": "^2.0.0",
+    "drizzle-orm": "^0.29.1",
+    "emoji-mart": "^5.5.2",
     "isbot": "^3.6.8",
-    "prisma": "^5.3.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-localization": "^1.0.19",
+    "react-emoji-search": "^2.2.26",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "react-showdown": "^2.3.1",
-    "redis": "^4.6.10",
-    "remix-auth-discord": "^1.2.1",
-    "zod": "^3.22.2",
-    "zodix": "^0.4.2"
+    "remix-auth-discord": "^1.3.2",
+    "twemoji": "^14.0.2",
+    "zod": "^3.22.4",
+    "zodix": "^0.4.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.0.1",
-    "@remix-run/eslint-config": "^2.0.1",
-    "@types/react": "^18.0.35",
-    "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-modal": "^3.16.0",
-    "autoprefixer": "^10.4.15",
-    "concurrently": "^8.2.1",
+    "@cloudflare/workers-types": "^4.20230518.0",
+    "@remix-run/dev": "^2.4.0",
+    "@types/react": "^18.2.20",
+    "@types/react-color": "^3.0.10",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-modal": "^3.16.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "drizzle-kit": "^0.20.7",
     "eslint": "^8.38.0",
-    "postcss": "^8.4.29",
-    "string-width": "4.2.3",
-    "string-width-cjs": "4.2.3",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.4",
-    "wrap-ansi": "7.0.0"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.1.6",
+    "wrangler": "^3.21.0"
   },
   "engines": {
     "node": ">=18.0.0"
