--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/cloudflare": "^2.4.0",
     "@remix-run/css-bundle": "^2.4.0",
     "@remix-run/react": "^2.4.0",
+    "@twemoji/api": "^15.0.3",
     "@types/showdown": "^2.0.6",
     "discord-api-types": "^0.37.66",
     "discord-snowflake": "^2.0.0",
@@ -35,7 +36,6 @@
     "react-select": "^5.8.0",
     "react-showdown": "^2.3.1",
     "remix-auth-discord": "^1.3.2",
-    "twemoji": "^14.0.2",
     "zod": "^3.22.4",
     "zodix": "^0.4.4"
   },
