feat: move db/kv to store package

--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -30,7 +30,8 @@
     "discord-verify": "^1.2.0",
     "drizzle-orm": "^0.29.0",
     "eslint-plugin-drizzle": "^0.2.2",
-    "itty-router": "^4.0.13"
+    "itty-router": "^4.0.13",
+    "store": "./packages/store"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
