--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -10,7 +10,7 @@
     "deploy": "wrangler deploy",
     "dev": "remix dev --manual -c \"npm start\"",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "wrangler dev ./build/index.js",
+    "start": "wrangler dev ./build/index.js --port=8788",
     "typecheck": "tsc",
     "migrate-dev": "drizzle-kit generate:sqlite --schema=app/db/schema.server.ts --out=./migrations && wrangler d1 migrations apply DB --local",
     "migrate": "yarn migrate-dev && wrangler d1 migrations apply DB"
