--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -1,14 +1,15 @@
 {
-    "extends": "@tsconfig/node18/tsconfig.json",
-    "compilerOptions": {
-        "lib": [
-            "es2017",
-            "dom",
-        ]
-    },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules"],
-    "ts-node": {
-        "esm": true
-    }
+  "extends": "@tsconfig/node18/tsconfig.json",
+  "compilerOptions": {
+    "lib": [
+        "es2017",
+        "dom",
+    ],
+    "types": ["@cloudflare/workers-types/2023-03-01"],
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "esm": true
+  }
 }
