--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -12,9 +12,7 @@
     "fix": "eslint --fix '**/*.ts'",
     "lint": "eslint '**/*.ts'",
     "register": "ts-node src/register.ts",
-    "publish": "wrangler deploy",
-    "migrate-dev": "drizzle-kit generate:sqlite --schema=src/db/schema.ts --out=./migrations && wrangler d1 migrations apply DB --local",
-    "migrate": "yarn migrate-dev && wrangler d1 migrations apply DB"
+    "publish": "wrangler deploy"
   },
   "keywords": [],
   "license": "MIT",
@@ -28,17 +26,18 @@
     "discord-api-types": "^0.37.63",
     "discord-bitflag": "^1.0.1",
     "discord-verify": "^1.2.0",
-    "drizzle-orm": "^0.29.0",
+    "drizzle-orm": "^0.29.3",
     "eslint-plugin-drizzle": "^0.2.2",
     "itty-router": "^4.0.13",
     "store": "./packages/store"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20230518.0",
     "@tsconfig/node18": "^18.2.2",
     "c8": "^8.0.0",
     "chai": "^4.3.7",
     "dotenv": "^16.0.3",
-    "drizzle-kit": "^0.20.4",
+    "drizzle-kit": "^0.20.13",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -47,7 +46,7 @@
     "prettier": "^3.0.1",
     "sinon": "^17.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "wrangler": "^3.0.1"
   }
 }
