--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -8,8 +8,5 @@
     "types": ["@cloudflare/workers-types/2023-03-01"],
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "esm": true
-  }
+  "exclude": ["node_modules"]
 }
