--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -17,6 +17,7 @@
     },
 
     // Remix takes care of building everything in `remix build`.
-    "noEmit": true
+    "noEmit": true,
+    "types": ["@cloudflare/workers-types/2023-03-01"],
   }
 }
