--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -11,8 +11,7 @@
     "dev": "remix dev --manual -c \"npm start\"",
     "start": "wrangler dev ./build/index.js --port=8788",
     "typecheck": "tsc",
-    "migrate-dev": "drizzle-kit generate:sqlite --schema=app/db/schema.server.ts --out=./migrations && wrangler d1 migrations apply DB --local",
-    "migrate": "yarn migrate-dev && wrangler d1 migrations apply DB"
+    "generate-help": "node scripts/generate-help.js",
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.1.3",
