--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ build/
 app/styles/app.css
 yarn-error.log
 .DS_Store
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
