--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -12,6 +12,8 @@
     "start": "wrangler dev ./build/index.js --port=8788",
     "typecheck": "tsc",
     "generate-help": "node scripts/generate-help.js",
+    "generate-emoji": "node scripts/generate-emoji.js",
+    "generate-highlights": "node scripts/generate-highlights.js"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.1.3",
@@ -26,6 +28,8 @@
     "discord-snowflake": "^2.0.0",
     "drizzle-orm": "^0.29.1",
     "emoji-mart": "^5.5.2",
+    "highlight.js": "^11.9.0",
+    "i18next": "^23.8.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
@@ -33,8 +37,8 @@
     "react-emoji-search": "^2.2.26",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
-    "react-showdown": "^2.3.1",
     "remix-auth-discord": "^1.3.2",
+    "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
     "zodix": "^0.4.4"
   },
