--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boogiehook",
+  "name": "boogiehook-site",
   "version": "1.0.0",
   "private": true,
   "sideEffects": false,
@@ -26,7 +26,6 @@
     "@types/showdown": "^2.0.6",
     "discord-api-types": "^0.37.66",
     "discord-snowflake": "^2.0.0",
-    "drizzle-orm": "^0.29.1",
     "emoji-mart": "^5.5.2",
     "highlight.js": "^11.9.0",
     "i18next": "^23.8.2",
