--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "boogiehook-site",
-  "version": "1.0.0",
+  "name": "discohook-site",
+  "version": "3.0.0",
   "private": true,
   "sideEffects": false,
   "license": "AGPL-3.0-or-later",
