feat(site): scheduled backups

--- a/packages/site/wrangler.toml
+++ b/packages/site/wrangler.toml
@@ -10,6 +10,13 @@ kv_namespaces = [
   { binding = "KV", id = "29967d1631d24846a448e8d2bcc49a5b", preview_id = "03d176ba6dbd4a2daa2f63f9f8f8bb4b" }
 ]
 
+[durable_objects]
+bindings = [{name = "SCHEDULER", class_name = "DurableScheduler"}]
+
+[[migrations]]
+tag = "v1"
+new_classes = ["DurableScheduler"]
+
 [site]
   bucket = "./public"
 
