--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -24,6 +24,8 @@
     "@remix-run/react": "^2.4.0",
     "@twemoji/api": "^15.0.3",
     "@types/showdown": "^2.0.6",
+    "chrono-node": "^2.7.5",
+    "cron-parser": "shayypy/cron-parser",
     "discord-api-types": "^0.37.66",
     "discord-bitflag": "^1.0.1",
     "discord-snowflake": "^2.0.0",
@@ -32,6 +34,7 @@
     "highlight.js": "^11.9.0",
     "i18next": "^23.8.2",
     "isbot": "^3.6.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
