--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,7 +9,7 @@
     "build": "remix build",
     "deploy": "wrangler deploy",
     "dev": "remix dev --manual -c \"npm start\"",
-    "start": "wrangler dev ./build/index.js --port=8788",
+    "start": "wrangler dev ./build/index.js --port=8788 --persist-to=../../persistence",
     "typecheck": "tsc",
     "generate-help": "node scripts/generate-help.js",
     "generate-emoji": "node scripts/generate-emoji.js",
