--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@theinternetfolks/snowflake": "^1.3.0",
     "discord-api-types": "^0.37.67",
     "discord-snowflake": "^2.0.0",
     "drizzle-orm": "^0.29.3",
