chore(site): format, update worker types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,7 @@
   },
   "eslint.onIgnoredFiles": "off",
   "eslint.run": "onType",
+  "[toml]": {
+    "editor.defaultFormatter": "tamasfe.even-better-toml"
+  },
 }
