feat(site): mentions picker

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -33,6 +33,7 @@
     "he": "^1.2.0",
     "highlight.js": "^11.9.0",
     "i18next": "^23.8.2",
+    "insert-text-at-cursor": "^0.3.0",
     "isbot": "^3.6.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -52,6 +53,7 @@
     "@cloudflare/workers-types": "^4.20240405.0",
     "@remix-run/dev": "^2.4.0",
     "@types/he": "^1",
+    "@types/insert-text-at-cursor": "^0",
     "@types/react": "^18.2.20",
     "@types/react-color": "^3.0.10",
     "@types/react-dom": "^18.2.7",
