feat(site): copy custom interactions endpoint

--- a/packages/site/wrangler.toml
+++ b/packages/site/wrangler.toml
@@ -39,3 +39,4 @@ DISCORD_SUPPORT_INVITE_CODE = "discohook-668218342779256857"
 LEGACY_ORIGIN = "https://discohook.org"
 MY_ORIGIN = "https://my.discohook.app"
 CDN_ORIGIN = "https://cdn.discohook.app"
+BOTS_ORIGIN = "https://bots.discohook.app"
