--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -46,7 +46,7 @@
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "remix-auth-discord": "^1.3.2",
-    "remix-auth-guilded": "GuildedAPI/remix-auth-guilded",
+    "remix-auth-guilded": "^1.0.1",
     "robots-parser": "^3.0.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
