chore: ignore i18n files

--- a/biome.json
+++ b/biome.json
@@ -7,6 +7,8 @@
       "./packages/site/functions/",
       "./packages/site/public/emoji.json",
       "./packages/site/public/help/",
+      "./packages/site/app/i18n/",
+      "./packages/bot/src/i18n/",
       "./packages/site/app/util/highlights.json",
       "./persistence/"
     ]
