--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:site": "cd packages/site && npm run dev",
     "dev:backups": "cd packages/magic-backup-importer && npm run dev",
     "ngrok:site": "ngrok http 8788",
-    "fix": "biome format . --write",
+    "format": "biome format . --write",
+    "lint": "biome lint . --apply",
+    "fix": "biome check --apply .",
     "db-migrate": "drizzle-kit generate:pg",
     "db-push": "drizzle-kit push:pg",
     "db-studio": "drizzle-kit studio"
