--- a/packages/site/wrangler.toml
+++ b/packages/site/wrangler.toml
@@ -14,6 +14,10 @@ services = [
   { binding = "CDN", service = "discohook-cdn", entrypoint = "UploaderService" },
 ]
 
+# [[hyperdrive]]
+# binding = "HYPERDRIVE"
+# id = ""
+
 [durable_objects]
 bindings = [
   { name = "SCHEDULER", class_name = "DurableScheduler" },
@@ -35,8 +39,12 @@ bucket = "./public"
 command = "npm run build"
 
 [vars]
+ENVIRONMENT = "dev"
 DISCORD_SUPPORT_INVITE_CODE = "discohook-668218342779256857"
 LEGACY_ORIGIN = "https://discohook.org"
 MY_ORIGIN = "https://my.discohook.app"
 CDN_ORIGIN = "https://cdn.discohook.app"
 BOTS_ORIGIN = "https://bots.discohook.app"
+
+[env.production]
+vars = { ENVIRONMENT = "production" }
