feat(bot): install i18next

--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -24,6 +24,7 @@
     "discord-api-types": "^0.37.81",
     "discord-bitflag": "^1.0.1",
     "discord-verify": "^1.2.0",
+    "i18next": "^23.11.5",
     "itty-router": "^4.0.13",
     "jose": "^5.4.0",
     "store": "../store"
