--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "format": "biome format . --write",
     "lint": "biome lint . --apply",
     "fix": "biome check --apply .",
-    "db-migrate": "drizzle-kit generate:pg",
-    "db-push": "drizzle-kit push:pg",
+    "db-generate": "drizzle-kit generate",
+    "db-migrate": "drizzle-kit migrate",
+    "db-push": "drizzle-kit push",
     "db-studio": "drizzle-kit studio"
   },
   "workspaces": [
@@ -23,7 +24,7 @@
   ],
   "devDependencies": {
     "@biomejs/biome": "^1.5.1",
-    "drizzle-kit": "^0.20.17",
+    "drizzle-kit": "^0.22.7",
     "ngrok": "^5.0.0-beta.2"
   },
   "packageManager": "yarn@4.1.0"
