--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -46,8 +46,9 @@
     "react-i18next": "^14.0.5",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
-    "remix-auth-discord": "^1.3.2",
+    "remix-auth-discord": "^1.3.3",
     "remix-auth-guilded": "^1.0.1",
+    "remix-utils": "^7.6.0",
     "robots-parser": "^3.0.1",
     "tailwind-merge": "^2.2.0",
     "tif-snowflake": "shayypy/snowflake",
