--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -13,7 +13,8 @@
     "drizzle-orm": "^0.31.2",
     "json-bigint": "^1.0.0",
     "postgres": "^3.4.3",
-    "tif-snowflake": "shayypy/snowflake"
+    "tif-snowflake": "shayypy/snowflake",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@discordjs/rest": "^2.2.0",
