--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "db-generate": "drizzle-kit generate",
     "db-migrate": "drizzle-kit migrate",
     "db-push": "drizzle-kit push",
-    "db-studio": "drizzle-kit studio"
+    "db-studio": "drizzle-kit studio",
+    "refresh-store": "cd packages/bot && yarn && cd ../site && yarn"
   },
   "workspaces": [
     "packages/*"
