--- a/packages/link/wrangler.toml
+++ b/packages/link/wrangler.toml
@@ -1,3 +1,6 @@
 name = "discohook-link"
 main = "src/index.ts"
 compatibility_date = "2024-04-02"
+
+[vars]
+DISCOHOOK_ORIGIN = "https://discohook.app"
