--- a/packages/magic-backup-importer/wrangler.toml
+++ b/packages/magic-backup-importer/wrangler.toml
@@ -1,6 +1,4 @@
 name = "discohook-backup-importer"
-
-workers_dev = true
 main = "./build/index.js"
 # https://developers.cloudflare.com/workers/platform/compatibility-dates
 compatibility_date = "2023-04-20"
@@ -10,3 +8,6 @@ compatibility_date = "2023-04-20"
 
 [build]
   command = "npm run build"
+
+[vars]
+DISCOHOOK_ORIGIN = "https://discohook.app"
