--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -12,7 +12,8 @@ kv_namespaces = [
 
 [vars]
 ENVIRONMENT = "dev"
-PREMIUM_SKUS = ["1249810125418397867", "1256329259501355188"]
+PREMIUM_SKUS = ["1249810125418397867"]
+LIFETIME_SKU = "1266826214807572542"
 
 [durable_objects]
 bindings = [{name = "COMPONENTS", class_name = "DurableComponentState"}]
@@ -22,4 +23,4 @@ tag = "v1"
 new_classes = ["DurableComponentState"]
 
 [env.production]
-vars = { ENVIRONMENT = "production", PREMIUM_SKUS = ["1249810125418397867", "1256329259501355188"] }
+vars = { ENVIRONMENT = "production", PREMIUM_SKUS = ["1249810125418397867"], LIFETIME_SKU = "1266826214807572542" }
