--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -22,5 +22,7 @@ bindings = [{name = "COMPONENTS", class_name = "DurableComponentState"}]
 tag = "v1"
 new_classes = ["DurableComponentState"]
 
-[env.production]
-vars = { ENVIRONMENT = "production", PREMIUM_SKUS = ["1249810125418397867"], LIFETIME_SKU = "1266826214807572542" }
+[env.production.vars]
+ENVIRONMENT = "production"
+PREMIUM_SKUS = ["1249810125418397867"]
+LIFETIME_SKU = "1266826214807572542"
