--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "remix build",
     "deploy": "wrangler deploy",
+    "deploy-preview": "wrangler deploy --env=preview",
     "dev": "remix dev --manual -c \"npm start\"",
     "start": "wrangler dev ./build/index.js --port=8788 --persist-to=../../persistence",
     "typecheck": "tsc",
