--- a/packages/bot-ws/package.json
+++ b/packages/bot-ws/package.json
@@ -2,7 +2,7 @@
   "name": "discohook-bot-ws",
   "version": "1.0.0",
   "description": "Extra proxy application for features that require a gateway connection",
-  "repository": "https://github.com/shayypy/discohook",
+  "repository": "https://github.com/discohook/discohook",
   "author": "shayypy",
   "license": "MIT",
   "private": true,
