--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -2,7 +2,7 @@
   "name": "store",
   "version": "0.0.0",
   "main": "index.ts",
-  "repository": "https://github.com/shayypy/discohook",
+  "repository": "https://github.com/discohook/discohook",
   "author": "shayypy",
   "license": "MIT",
   "private": true,
@@ -13,7 +13,7 @@
     "drizzle-orm": "^0.31.2",
     "json-bigint": "^1.0.0",
     "postgres": "^3.4.3",
-    "tif-snowflake": "shayypy/snowflake",
+    "tif-snowflake": "discohook/snowflake",
     "zod": "^3.23.8",
     "zodix": "^0.4.4"
   },
